duniverse/menhirLib.20200211/test/static/good/empty-action.mly
%token A
%start<int> a
%%

a: b c
{}

%inline b: A {}

c: A {}
