duniverse/menhirLib.20200211/test/static/bad/dont-use-private-symbol-2.mly
%start<int> b
%%

b: a {}
